# Automatic_cleaning_vehicle_project

./: README.md  remote_desktop.sh  start_point.sh
Arduino/robotic_arm/: robotic_arm.ino
Arduino/ultrsonic_sensor_and_IMU/: ultrsonic_sensor_and_IMU.ino
darknet/: Makefile  result.json  testyolo.sh  testyolo_myself.sh
darknet/src/: coco.c  demo.c  demo.h  detector.c  yolo.c
encoder_motor/: encoder_motor.ino
robot/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
robot/devel/include/dataget/: imdata.h
robot/devel/lib/calculate_theta/: calculate_arm_theta  test_function
robot/devel/lib/dataget/: fake_fix  find_nearest_target  getgpslocation  gps_vector  gpsbodycoordinate  imuandbodycoordinate  point_store_to_check_spot  robot_spot_now  trash_coordinate
robot/devel/lib/imu_complementary_filter/: complementary_filter_node
robot/devel/lib/imu_filter_madgwick/: imu_filter_node
robot/devel/lib/pkgconfig/: calculate_theta.pc  dataget.pc  imu_complementary_filter.pc  imu_filter_madgwick.pc  mobile_manipulator_body.pc  nmea_navsat_driver.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  rviz_imu_plugin.pc  test_tf2.pc  tf2.pc  tf2_bullet.pc  tf2_eigen.pc  tf2_geometry_msgs.pc  tf2_kdl.pc  tf2_msgs.pc  tf2_py.pc  tf2_ros.pc  tf2_sensor_msgs.pc  tf2_tools.pc  total_startup.pc
robot/devel/lib/python2.7/dist-packages/libnmea_navsat_driver/: __init__.py
robot/devel/lib/python2.7/dist-packages/rosserial_arduino/: __init__.py
robot/devel/lib/python2.7/dist-packages/rosserial_client/: __init__.py
robot/devel/lib/python2.7/dist-packages/rosserial_python/: __init__.py
robot/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
robot/devel/lib/tf2_ros/: buffer_server  static_transform_publisher
robot/devel/share/calculate_theta/cmake/: calculate_thetaConfig.cmake
robot/devel/share/dataget/cmake/: dataget-msg-extras.cmake  dataget-msg-paths.cmake  datagetConfig.cmake
robot/devel/share/imu_complementary_filter/cmake/: imu_complementary_filterConfig.cmake
robot/devel/share/imu_filter_madgwick/cmake/: imu_filter_madgwickConfig.cmake
robot/devel/share/mobile_manipulator_body/cmake/: mobile_manipulator_bodyConfig.cmake
robot/devel/share/nmea_navsat_driver/cmake/: nmea_navsat_driverConfig.cmake
robot/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
robot/devel/share/rosserial_chibios/cmake/: rosserial_chibiosConfig.cmake
robot/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
robot/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
robot/devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
robot/devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-extras.cmake  rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
robot/devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
robot/devel/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
robot/devel/share/rosserial_test/cmake/: rosserial_testConfig.cmake
robot/devel/share/rosserial_tivac/cmake/: rosserial_tivac-extras.cmake  rosserial_tivacConfig.cmake
robot/devel/share/rosserial_vex_cortex/cmake/: rosserial_vex_cortexConfig.cmake
robot/devel/share/rosserial_vex_v5/cmake/: rosserial_vex_v5Config.cmake
robot/devel/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
robot/devel/share/rosserial_xbee/cmake/: rosserial_xbeeConfig.cmake
robot/devel/share/rviz_imu_plugin/cmake/: rviz_imu_pluginConfig.cmake
robot/devel/share/test_tf2/cmake/: test_tf2Config.cmake
robot/devel/share/tf2/cmake/: tf2Config.cmake
robot/devel/share/tf2_bullet/cmake/: tf2_bulletConfig.cmake
robot/devel/share/tf2_eigen/cmake/: tf2_eigenConfig.cmake
robot/devel/share/tf2_geometry_msgs/cmake/: tf2_geometry_msgsConfig.cmake
robot/devel/share/tf2_kdl/cmake/: tf2_kdlConfig.cmake
robot/devel/share/tf2_msgs/cmake/: tf2_msgs-msg-extras.cmake  tf2_msgs-msg-paths.cmake  tf2_msgsConfig.cmake
robot/devel/share/tf2_py/cmake/: tf2_pyConfig.cmake
robot/devel/share/tf2_ros/cmake/: tf2_rosConfig.cmake
robot/devel/share/tf2_sensor_msgs/cmake/: tf2_sensor_msgsConfig.cmake
robot/devel/share/tf2_tools/cmake/: tf2_toolsConfig.cmake
robot/devel/share/total_startup/cmake/: total_startupConfig.cmake
robot/src/calculate_theta/: CMakeLists.txt  package.xml
robot/src/calculate_theta/launch/: robot_arm.launch
robot/src/calculate_theta/src/: calculate_arm_theta.cpp  test_function.cpp
robot/src/dataget/: CMakeLists.txt  package.xml  worklist.txt
robot/src/dataget/include/dataget/: MyMatrix.h  five_dof_kinematic.h
robot/src/dataget/launch/: gpsdata.launch  start_point.launch
robot/src/dataget/msg/: imdata.msg
robot/src/dataget/src/: MyMatrix.cpp  SixDofKinemate.cpp  fake_fix.cpp  find_nearest_target.cpp  get_data_yolov3.py  getgpslocation.cpp  gpsbodycoordinate.cpp  imuandbodycoordinate.cpp  point_store_to_check_spot.cpp  readit  robot_spot_now.cpp  trash_coordinate.cpp  whole_map.cpp
robot/src/dataget/src/no_use/: get_datafromgps.cpp  imu_read.cpp
robot/src/mobile_manipulator_body/: package.xml
robot/src/mobile_manipulator_body/launch/: base.launch
robot/src/nmea_navsat_driver-master/: CMakeLists.txt
robot/src/nmea_navsat_driver-master/launch/: nmea_serial_driver.launch
robot/src/nmea_navsat_driver-master/scripts/: nmea_serial_driver  nmea_socket_driver  nmea_topic_driver  nmea_topic_serial_reader
robot/src/total_startup/: CMakeLists.txt  package.xml
robot/src/total_startup/launch/: test.launch  test2.launch  total_start.launch
tiltcorrection/: tiltcorrection.ino
ultrasonicode/: ultrasonicode.ino
ultrasonicode/mega_ultrasonic_code/: mega_ultrasonic_code.ino
(+23 files in other folders)
